--- a/versions/v2.8/modules/zh/pages/cluster-admin/backups-and-restore/restore.adoc
+++ b/versions/v2.8/modules/zh/pages/cluster-admin/backups-and-restore/restore.adoc
@@ -51,11 +51,50 @@ Rancher UI 中提供了集群所有可用快照的列表：
 ======
 Tab RKE::
 +
-请按照 [SUSE 知识库](https://www.suse.com/support/kb/doc/?id=000020695)中描述的流程进行操作。 
+--
+请按照 https://www.suse.com/support/kb/doc/?id=000020695[SUSE 知识库]中描述的流程进行操作。
+--
 
 Tab RKE2/K3s::
 +
-如果集群完全故障，则必须从集群中删除所有 etcd 节点和机器，然后才能添加新的 etcd 节点来进行还原。 :::note 由于[已知问题](https://github.com/rancher/rancher/issues/41080)，此过程需要 Rancher v2.7.5 或更高版本。 ::: :::note 如果你使用[本地快照](backups.md#本地备份目标)，那么请**务必**从要删除的 etcd 节点上的 `/var/lib/rancher/<k3s/rke2>/server/db/snapshots/` 文件夹中备份要还原的快照。你可以将快照复制到 `/var/lib/rancher/<k3s/rke2>/server/db/snapshots/` 文件夹中的新节点上。此外，如果使用本地快照并还原到新节点，目前还无法通过 UI 进行还原。 ::: 1. 从集群中删除所有 etcd 节点。 1. 在左上角，单击 **☰ > 集群管理**。 1. 在**集群**页面中，转到要删除节点的集群。 1. 在**主机**选项卡中，找到要删除的每个节点并单击 **⋮ > 删除**。开始时，节点会挂在 `deleting` 状态，所有 etcd 节点都被删除后，它们将被一起删除。这是因为 Rancher 发现所有 etcd 节点都在删除，并开始 "短路" etcd 安全删除逻辑。 1. 删除所有 etcd 节点后，添加要用于还原的新 etcd 节点。 - 对于自定义集群，请转到**注册**选项卡，然后在节点上复制并运行注册命令。如果该节点之前已在集群中使用过，请先[清理该节点](../manage-clusters/clean-cluster-nodes.md#清理节点)。 - 对于主机驱动集群，则会自动配置新节点。 此时，Rancher 会提示你需要使用 etcd 快照进行还原。 1. 使用 etcd 快照还原。 - 对于 S3 快照，使用 UI 进行还原。 1. 单击**快照**选项卡来查看已保存快照的列表。 1. 转到要恢复的快照，然后单击 **⋮ > 还原**。 1. 选择一个**还原类型**。 1. 点击**还原**。 - 对于本地快照，使用 UI 进行还原**不**可用。 1. 单击右上角的 **⋮> 编辑 YAML**。 1. 将 `spec.cluster.rkeConfig.etcdSnapshotRestore.name` 定义为 `/var/lib/rancher/<k3s/rke2>/server/db/snapshots/` 中磁盘上快照的文件名。 1. 还原成功后，你可以将 etcd 节点扩展至所需的冗余。
+--
+如果集群完全故障，则必须从集群中删除所有 etcd 节点和机器，然后才能添加新的 etcd 节点来进行还原。
+
+[NOTE]
+====
+
+由于https://github.com/rancher/rancher/issues/41080[已知问题]，此过程需要 Rancher v2.7.5 或更高版本。
+====
+
+
+[NOTE]
+====
+
+如果你使用link:backups.adoc#本地备份目标[本地快照]，那么请**务必**从要删除的 etcd 节点上的 `/var/lib/rancher/<k3s/rke2>/server/db/snapshots/` 文件夹中备份要还原的快照。你可以将快照复制到 `/var/lib/rancher/<k3s/rke2>/server/db/snapshots/` 文件夹中的新节点上。此外，如果使用本地快照并还原到新节点，目前还无法通过 UI 进行还原。
+====
+
+
+. 从集群中删除所有 etcd 节点。
+ .. 在左上角，单击 *☰ > 集群管理*。
+ .. 在**集群**页面中，转到要删除节点的集群。
+ .. 在**主机**选项卡中，找到要删除的每个节点并单击 *⋮ > 删除*。开始时，节点会挂在 `deleting` 状态，所有 etcd 节点都被删除后，它们将被一起删除。这是因为 Rancher 发现所有 etcd 节点都在删除，并开始 "短路" etcd 安全删除逻辑。
+. 删除所有 etcd 节点后，添加要用于还原的新 etcd 节点。
+ ** 对于自定义集群，请转到**注册**选项卡，然后在节点上复制并运行注册命令。如果该节点之前已在集群中使用过，请先link:../manage-clusters/clean-cluster-nodes.adoc#清理节点[清理该节点]。
+ ** 对于主机驱动集群，则会自动配置新节点。
+
++
+此时，Rancher 会提示你需要使用 etcd 快照进行还原。
+. 使用 etcd 快照还原。
+ ** 对于 S3 快照，使用 UI 进行还原。
+  ... 单击**快照**选项卡来查看已保存快照的列表。
+  ... 转到要恢复的快照，然后单击 *⋮ > 还原*。
+  ... 选择一个**还原类型**。
+  ... 点击**还原**。
+ ** 对于本地快照，使用 UI 进行还原**不**可用。
+  ... 单击右上角的 *⋮> 编辑 YAML*。
+  ... 将 `spec.cluster.rkeConfig.etcdSnapshotRestore.name` 定义为 `/var/lib/rancher/<k3s/rke2>/server/db/snapshots/` 中磁盘上快照的文件名。
+. 还原成功后，你可以将 etcd 节点扩展至所需的冗余。
+--
 ======
 
 == 在没有快照的情况下恢复 etcd（RKE）
