--- a/versions/v2.8/modules/zh/pages/installation-and-upgrade/install-rancher.adoc
+++ b/versions/v2.8/modules/zh/pages/installation-and-upgrade/install-rancher.adoc
@@ -209,14 +209,171 @@ cert-manager-webhook-787858fcdb-nlzsq      1/1     Running   0          2m
 ======
 Tab Rancher 生成的证书::
 +
-默认情况是使用 Rancher 生成 CA，并使用 `cert-manager` 颁发用于访问 Rancher Server 接口的证书。 由于 `rancher` 是 `ingress.tls.source` 的默认选项，因此在执行 `helm install` 命令时，我们不需要指定 `ingress.tls.source`。 - 将 `hostname` 设置为解析到你的负载均衡器的 DNS 名称。 - 将 `bootstrapPassword` 设置为 `admin` 用户独有的值。 - 如果你需要安装指定的 Rancher 版本，使用 `--version` 标志，例如 `--version 2.7.0`。 - 对于 Kubernetes v1.25 或更高版本，使用 Rancher v2.7.2-v2.7.4 时，将 `global.cattle.psp.enabled` 设置为 `false`。对于 Rancher v2.7.5 及更高版本来说，这不是必需的，但你仍然可以手动设置该选项。 ``` helm install rancher rancher-+++<CHART_REPO>+++/rancher \ --namespace cattle-system \ --set hostname=rancher.my.org \ --set bootstrapPassword=admin ``` 如果你安装的是 alpha 版本，Helm 会要求你在安装命令中添加 `--devel` 选项： ``` helm install rancher rancher-alpha/rancher --devel ``` 等待 Rancher 运行： ``` kubectl -n cattle-system rollout status deploy/rancher Waiting for deployment "rancher" rollout to finish: 0 of 3 updated replicas are available\... deployment "rancher" successfully rolled out ```  
+--
+默认情况是使用 Rancher 生成 CA，并使用 `cert-manager` 颁发用于访问 Rancher Server 接口的证书。
+
+由于 `rancher` 是 `ingress.tls.source` 的默认选项，因此在执行 `helm install` 命令时，我们不需要指定 `ingress.tls.source`。
+
+* 将 `hostname` 设置为解析到你的负载均衡器的 DNS 名称。
+* 将 `bootstrapPassword` 设置为 `admin` 用户独有的值。
+* 如果你需要安装指定的 Rancher 版本，使用 `--version` 标志，例如 `--version 2.7.0`。
+* 对于 Kubernetes v1.25 或更高版本，使用 Rancher v2.7.2-v2.7.4 时，将 `global.cattle.psp.enabled` 设置为 `false`。对于 Rancher v2.7.5 及更高版本来说，这不是必需的，但你仍然可以手动设置该选项。
+
+----
+helm install rancher rancher-<CHART_REPO>/rancher \
+  --namespace cattle-system \
+  --set hostname=rancher.my.org \
+  --set bootstrapPassword=admin
+----
+
+如果你安装的是 alpha 版本，Helm 会要求你在安装命令中添加 `--devel` 选项：
+
+----
+helm install rancher rancher-alpha/rancher --devel
+----
+
+等待 Rancher 运行：
+
+----
+kubectl -n cattle-system rollout status deploy/rancher
+Waiting for deployment "rancher" rollout to finish: 0 of 3 updated replicas are available...
+deployment "rancher" successfully rolled out
+----
+--
 
 Tab Let's Encrypt::
 +
-此选项使用 `cert-manager` 来自动请求和续订 [Let's Encrypt](https://letsencrypt.org/) 证书。Let's Encrypt 是免费的，而且是受信的 CA，因此可以为你提供有效的证书。 :::note 由于 HTTP-01 质询只能在端口 80 上完成，因此你需要打开端口 80。 ::: 在以下命令中， - 将 `hostname` 设置为公有 DNS 记录。 - 将 `bootstrapPassword` 设置为 `admin` 用户独有的值。 - 将 `ingress.tls.source` 设置为 `letsEncrypt`。 - 将 `letsEncrypt.email` 设置为可通讯的电子邮件地址，用于发送通知（例如证书到期的通知）。 - 将 `letsEncrypt.ingress.class` 设为你的 Ingress Controller（例如 `traefik`，`nginx`，`haproxy`） - 对于 Kubernetes v1.25 或更高版本，使用 Rancher v2.7.2-v2.7.4 时，将 `global.cattle.psp.enabled` 设置为 `false`。对于 Rancher v2.7.5 及更高版本来说，这不是必需的，但你仍然可以手动设置该选项。 ``` helm install rancher rancher-+++<CHART_REPO>+++/rancher \ --namespace cattle-system \ --set hostname=rancher.my.org \ --set bootstrapPassword=admin \ --set ingress.tls.source=letsEncrypt \ --set letsEncrypt.email=me@example.org \ --set letsEncrypt.ingress.class=nginx ``` 如果你安装的是 alpha 版本，Helm 会要求你在安装命令中添加 `--devel` 选项： ``` helm install rancher rancher-alpha/rancher --devel ``` 等待 Rancher 运行： ``` kubectl -n cattle-system rollout status deploy/rancher Waiting for deployment "rancher" rollout to finish: 0 of 3 updated replicas are available\... deployment "rancher" successfully rolled out ```  
+--
+此选项使用 `cert-manager` 来自动请求和续订 https://letsencrypt.org/[Let's Encrypt] 证书。Let's Encrypt 是免费的，而且是受信的 CA，因此可以为你提供有效的证书。
+
+[NOTE]
+====
+
+由于 HTTP-01 质询只能在端口 80 上完成，因此你需要打开端口 80。
+====
+
+
+在以下命令中，
+
+* 将 `hostname` 设置为公有 DNS 记录。
+* 将 `bootstrapPassword` 设置为 `admin` 用户独有的值。
+* 将 `ingress.tls.source` 设置为 `letsEncrypt`。
+* 将 `letsEncrypt.email` 设置为可通讯的电子邮件地址，用于发送通知（例如证书到期的通知）。
+* 将 `letsEncrypt.ingress.class` 设为你的 Ingress Controller（例如 `traefik`，`nginx`，`haproxy`）
+* 对于 Kubernetes v1.25 或更高版本，使用 Rancher v2.7.2-v2.7.4 时，将 `global.cattle.psp.enabled` 设置为 `false`。对于 Rancher v2.7.5 及更高版本来说，这不是必需的，但你仍然可以手动设置该选项。
+
+----
+helm install rancher rancher-<CHART_REPO>/rancher \
+  --namespace cattle-system \
+  --set hostname=rancher.my.org \
+  --set bootstrapPassword=admin \
+  --set ingress.tls.source=letsEncrypt \
+  --set letsEncrypt.email=me@example.org \
+  --set letsEncrypt.ingress.class=nginx
+----
+
+如果你安装的是 alpha 版本，Helm 会要求你在安装命令中添加 `--devel` 选项：
+
+----
+helm install rancher rancher-alpha/rancher --devel
+----
+
+等待 Rancher 运行：
+
+----
+kubectl -n cattle-system rollout status deploy/rancher
+Waiting for deployment "rancher" rollout to finish: 0 of 3 updated replicas are available...
+deployment "rancher" successfully rolled out
+----
+--
 
 Tab 证书文件::
 +
-在此选项中，你使用你自己的证书来创建 Kubernetes 密文，以供 Rancher 使用。 运行这个命令时，`hostname` 选项必须与服务器证书中的 `Common Name` 或 `Subject Alternative Names` 条目匹配，否则 Ingress controller 将无法正确配置。 虽然技术上仅需要 `Subject Alternative Names` 中有一个条目，但是拥有一个匹配的 `Common Name` 可以最大程度地提高与旧版浏览器/应用的兼容性。 :::note 如果你想检查证书是否正确，请查看[如何在服务器证书中检查 Common Name 和 Subject Alternative Names](../faq/technical-items.md#如何在服务器证书中检查-common-name-和-subject-alternative-names)。 ::: - 设置 `hostname`。 - 将 `bootstrapPassword` 设置为 `admin` 用户独有的值。 - 将 `ingress.tls.source` 设置为 `secret`。 - 对于 Kubernetes v1.25 或更高版本，使用 Rancher v2.7.2-v2.7.4 时，将 `global.cattle.psp.enabled` 设置为 `false`。对于 Rancher v2.7.5 及更高版本来说，这不是必需的，但你仍然可以手动设置该选项。 ``` helm install rancher rancher-+++<CHART_REPO>+++/rancher \ --namespace cattle-system \ --set hostname=rancher.my.org \ --set bootstrapPassword=admin \ --set ingress.tls.source=secret ``` 如果你安装的是 alpha 版本，Helm 会要求你在安装命令中添加 `--devel` 选项： ``` helm install rancher rancher-alpha/rancher --devel ``` 如果你使用的是私有 CA 证书，请在命令中增加 `--set privateCA=true`。 ``` helm install rancher rancher-+++<CHART_REPO>+++/rancher \ --namespace cattle-system \ --set hostname=rancher.my.org \ --set bootstrapPassword=admin \ --set ingress.tls.source=secret \ --set privateCA=true ``` **添加 TLS 密文（千万不要遗漏此步骤）**：现在 Rancher 已经完成部署，你还需要参考[添加 TLS 密文](resources/tls-secrets.md)发布证书文件，以便 Rancher 和 Ingress Controller 可以使用它们。  
-====== Rancher Chart 有许多选项，用于为你的具体环境自定义安装。以下是一些常见的高级方案： - [HTTP 代理](references/helm-chart-options.md#http-代理) - [私有容器镜像仓库](references/helm-chart-options.md#私有仓库和离线安装) - [外部负载均衡器上的 TLS 终止](references/helm-chart-options.md#外部-tls-终止) 如需获取完整的选项列表，请参见 [Chart 选项](references/helm-chart-options.md)。 ### 6. 验证 Rancher Server 是否部署成功 添加密文后，检查 Rancher 是否已成功运行： ``` kubectl -n cattle-system rollout status deploy/rancher Waiting for deployment "rancher" rollout to finish: 0 of 3 updated replicas are available\... deployment "rancher" successfully rolled out ``` 如果你看到 `error: deployment "rancher" exceeded its progress deadline` 这个错误，可运行以下命令来检查 deployment 的状态： ``` kubectl -n cattle-system get deploy rancher NAME DESIRED CURRENT UP-TO-DATE AVAILABLE AGE rancher 3 3 3 3 3m ``` `DESIRED` 和 `AVAILABLE`的个数应该相同。 ### 7. 保存选项 请保存你使用的 `--set` 选项。使用 Helm 升级 Rancher 到新版本时，你将需要使用相同的选项。 ### 安装完成 安装已完成。现在 Rancher Server 应该已经可以正常运行了。 使用浏览器打开把流量转发到你的负载均衡器的 DNS 域名。然后，你就会看到一个漂亮的登录页面了。 如果遇到任何问题，请参见[故障排除](troubleshooting/troubleshooting.md)。+++</CHART_REPO>++++++</CHART_REPO></CHART_REPO></CHART_REPO>
-======
+--
+在此选项中，你使用你自己的证书来创建 Kubernetes 密文，以供 Rancher 使用。
+
+运行这个命令时，`hostname` 选项必须与服务器证书中的 `Common Name` 或 `Subject Alternative Names` 条目匹配，否则 Ingress controller 将无法正确配置。
+
+虽然技术上仅需要 `Subject Alternative Names` 中有一个条目，但是拥有一个匹配的 `Common Name` 可以最大程度地提高与旧版浏览器/应用的兼容性。
+
+[NOTE]
+====
+
+如果你想检查证书是否正确，请查看link:../faq/technical-items.adoc#如何在服务器证书中检查-common-name-和-subject-alternative-names[如何在服务器证书中检查 Common Name 和 Subject Alternative Names]。
+====
+
+
+* 设置 `hostname`。
+* 将 `bootstrapPassword` 设置为 `admin` 用户独有的值。
+* 将 `ingress.tls.source` 设置为 `secret`。
+* 对于 Kubernetes v1.25 或更高版本，使用 Rancher v2.7.2-v2.7.4 时，将 `global.cattle.psp.enabled` 设置为 `false`。对于 Rancher v2.7.5 及更高版本来说，这不是必需的，但你仍然可以手动设置该选项。
+
+----
+helm install rancher rancher-<CHART_REPO>/rancher \
+  --namespace cattle-system \
+  --set hostname=rancher.my.org \
+  --set bootstrapPassword=admin \
+  --set ingress.tls.source=secret
+----
+
+如果你安装的是 alpha 版本，Helm 会要求你在安装命令中添加 `--devel` 选项：
+
+----
+helm install rancher rancher-alpha/rancher --devel
+----
+
+如果你使用的是私有 CA 证书，请在命令中增加 `--set privateCA=true`。
+
+----
+helm install rancher rancher-<CHART_REPO>/rancher \
+  --namespace cattle-system \
+  --set hostname=rancher.my.org \
+  --set bootstrapPassword=admin \
+  --set ingress.tls.source=secret \
+  --set privateCA=true
+----
+
+*添加 TLS 密文（千万不要遗漏此步骤）*：现在 Rancher 已经完成部署，你还需要参考link:./resources/tls-secrets.adoc[添加 TLS 密文]发布证书文件，以便 Rancher 和 Ingress Controller 可以使用它们。
+--
+====== 
+
+Rancher Chart 有许多选项，用于为你的具体环境自定义安装。以下是一些常见的高级方案：
+
+* link:./references/helm-chart-options.adoc#http-代理[HTTP 代理]
+* link:./references/helm-chart-options.adoc#私有仓库和离线安装[私有容器镜像仓库]
+* link:./references/helm-chart-options.adoc#外部-tls-终止[外部负载均衡器上的 TLS 终止]
+
+如需获取完整的选项列表，请参见 link:./references/helm-chart-options.adoc[Chart 选项]。
+
+=== 6. 验证 Rancher Server 是否部署成功
+
+添加密文后，检查 Rancher 是否已成功运行：
+
+----
+kubectl -n cattle-system rollout status deploy/rancher
+Waiting for deployment "rancher" rollout to finish: 0 of 3 updated replicas are available...
+deployment "rancher" successfully rolled out
+----
+
+如果你看到 `error: deployment "rancher" exceeded its progress deadline` 这个错误，可运行以下命令来检查 deployment 的状态：
+
+----
+kubectl -n cattle-system get deploy rancher
+NAME      DESIRED   CURRENT   UP-TO-DATE   AVAILABLE   AGE
+rancher   3         3         3            3           3m
+----
+
+`DESIRED` 和 ``AVAILABLE``的个数应该相同。
+
+=== 7. 保存选项
+
+请保存你使用的 `--set` 选项。使用 Helm 升级 Rancher 到新版本时，你将需要使用相同的选项。
+
+=== 安装完成
+
+安装已完成。现在 Rancher Server 应该已经可以正常运行了。
+
+使用浏览器打开把流量转发到你的负载均衡器的 DNS 域名。然后，你就会看到一个漂亮的登录页面了。
+
+如果遇到任何问题，请参见xref:troubleshooting.adoc[故障排除]。
+
