--- a/versions/v2.8/modules/zh/pages/security/hardening-guides/rke2/rke2.adoc
+++ b/versions/v2.8/modules/zh/pages/security/hardening-guides/rke2/rke2.adoc
@@ -51,11 +51,26 @@ RKE2 在不需要修改的情况下通过了许多 Kubernetes CIS controls，因
 ======
 Tab v1.25 及更新版本::
 +
-自 CIS benchmark 1.7 开始，不再需要`protect-kernel-defaults`。 
+--
+自 CIS benchmark 1.7 开始，不再需要``protect-kernel-defaults``。
+--
 
 Tab v1.24 及更早版本::
 +
-这是一个 kubelet 标志，如果所需的内核参数未设置或设置为与 kubelet 的默认值不同的值，将导致 kubelet 退出。 可以在 Rancher 的集群配置中设置 `protect-kernel-defaults` 标志。 ```yaml spec: rkeConfig: machineSelectorConfig: - config: protect-kernel-defaults: true ```
+--
+这是一个 kubelet 标志，如果所需的内核参数未设置或设置为与 kubelet 的默认值不同的值，将导致 kubelet 退出。
+
+可以在 Rancher 的集群配置中设置 `protect-kernel-defaults` 标志。
+
+[,yaml]
+----
+spec:
+  rkeConfig:
+    machineSelectorConfig:
+      - config:
+          protect-kernel-defaults: true
+----
+--
 ======
 
 === 设置内核参数
@@ -103,11 +118,64 @@ RKE2 始终以一定程度的 Pod 安全性运行。
 ======
 Tab v1.25 及更新版本::
 +
-在 v1.25 及更高版本中，[Pod 安全准入(PSAs)](https://kubernetes.io/docs/concepts/security/pod-security-admission/)用于保证 pod 安全。 以下是确保加固 RKE2 通过 Rancher 中提供的 CIS v1.23 加固配置文件 `rke2-cis-1.7-hardened` 所需的最低配置。 ```yaml spec: defaultPodSecurityAdmissionConfigurationTemplateName: rancher-restricted rkeConfig: machineSelectorConfig: - config: profile: cis-1.23 ``` 当同时设置了 `defaultPodSecurityAdmissionConfigurationTemplateName` 和 `profile` 标志时，Rancher 和 RKE2 会执行以下操作： 1. 检查是否已满足主机级要求。如果未满足，RKE2 将以致命错误退出，并描述未满足的要求。 2. 应用允许群集传递关联 controls 的网络策略。 3. 配置 Pod 安全准入控制器（PSA）使用 PSA 配置模板 `rancher-restricted`，以在所有命名空间中强制执行受限模式，除了模板豁免列表中的命名空间。 这些命名空间被豁免，以允许系统 Pod 在没有限制的情况下运行，这是集群正常运行所必需的。 :::note 如果你打算将一个 RKE 集群导入到 Rancher 中，请参考[文档](../../psact.md)了解如何配置 PSA 以豁免 Rancher system 命名空间。 ::: 
+--
+在 v1.25 及更高版本中，https://kubernetes.io/docs/concepts/security/pod-security-admission/[Pod 安全准入(PSAs)]用于保证 pod 安全。
+
+以下是确保加固 RKE2 通过 Rancher 中提供的 CIS v1.23 加固配置文件 `rke2-cis-1.7-hardened` 所需的最低配置。
+
+[,yaml]
+----
+spec:
+  defaultPodSecurityAdmissionConfigurationTemplateName: rancher-restricted
+  rkeConfig:
+    machineSelectorConfig:
+      - config:
+          profile: cis-1.23
+----
+
+当同时设置了 `defaultPodSecurityAdmissionConfigurationTemplateName` 和 `profile` 标志时，Rancher 和 RKE2 会执行以下操作：
+
+. 检查是否已满足主机级要求。如果未满足，RKE2 将以致命错误退出，并描述未满足的要求。
+. 应用允许群集传递关联 controls 的网络策略。
+. 配置 Pod 安全准入控制器（PSA）使用 PSA 配置模板 `rancher-restricted`，以在所有命名空间中强制执行受限模式，除了模板豁免列表中的命名空间。
+这些命名空间被豁免，以允许系统 Pod 在没有限制的情况下运行，这是集群正常运行所必需的。
+
+[NOTE]
+====
+如果你打算将一个 RKE 集群导入到 Rancher 中，请参考link:../../psact.adoc[文档]了解如何配置 PSA 以豁免 Rancher system 命名空间。
+====
+
+--
 
 Tab v1.24 及更早版本::
 +
-在 Kubernetes v1.24 及更早版本中，`PodSecurityPolicy` 准入控制器始终是启用的。 以下是确保 RKE2 加固以通过 Rancher 中提供的 CIS v1.23 加固配置文件 `rke2-cis-1.23-hardened` 所需的最低配置。 :::note 在下面的示例中，配置文件设置为`cis-1.6`，这是在上游 RKE2 中定义的值，但集群实际上配置为传递 CIS v1.23 加固配置文件 ::: ```yaml spec: defaultPodSecurityPolicyTemplateName: restricted-noroot rkeConfig: machineSelectorConfig: - config: profile: cis-1.6 ``` 当同时设置了 `defaultPodSecurityPolicyTemplateName` 和 `profile` 标志时，Rancher 和 RKE2 会执行以下操作： 1. 检查是否已满足主机级要求。如果未满足，RKE2 将以致命错误退出，并描述未满足的要求。 2. 应用网络策略，以确保集群通过相关的 controls 要求。 3. 配置运行时 Pod 安全策略，以确保集群通过相关的 controls 要求。
+--
+在 Kubernetes v1.24 及更早版本中，`PodSecurityPolicy` 准入控制器始终是启用的。
+
+以下是确保 RKE2 加固以通过 Rancher 中提供的 CIS v1.23 加固配置文件 `rke2-cis-1.23-hardened` 所需的最低配置。
+
+[NOTE]
+====
+在下面的示例中，配置文件设置为``cis-1.6``，这是在上游 RKE2 中定义的值，但集群实际上配置为传递 CIS v1.23 加固配置文件
+====
+
+
+[,yaml]
+----
+spec:
+  defaultPodSecurityPolicyTemplateName: restricted-noroot
+  rkeConfig:
+    machineSelectorConfig:
+      - config:
+          profile: cis-1.6
+----
+
+当同时设置了 `defaultPodSecurityPolicyTemplateName` 和 `profile` 标志时，Rancher 和 RKE2 会执行以下操作：
+
+. 检查是否已满足主机级要求。如果未满足，RKE2 将以致命错误退出，并描述未满足的要求。
+. 应用网络策略，以确保集群通过相关的 controls 要求。
+. 配置运行时 Pod 安全策略，以确保集群通过相关的 controls 要求。
+--
 ======
 
 [NOTE]
@@ -194,11 +262,42 @@ rules:
 ======
 Tab v1.25 及更新版本::
 +
-```yaml apiVersion: provisioning.cattle.io/v1 kind: Cluster metadata: name: # 定义集群名称 spec: defaultPodSecurityAdmissionConfigurationTemplateName: rancher-restricted kubernetesVersion: # 定义 RKE2 版本 rkeConfig: machineSelectorConfig: - config: profile: cis-1.23 ``` 
+--
+[,yaml]
+----
+apiVersion: provisioning.cattle.io/v1
+kind: Cluster
+metadata:
+  name: # 定义集群名称
+spec:
+  defaultPodSecurityAdmissionConfigurationTemplateName: rancher-restricted
+  kubernetesVersion: # 定义 RKE2 版本
+  rkeConfig:
+    machineSelectorConfig:
+      - config:
+          profile: cis-1.23
+----
+--
 
 Tab v1.24 及更早版本::
 +
-```yaml apiVersion: provisioning.cattle.io/v1 kind: Cluster metadata: name: # 定义集群名称 spec: defaultPodSecurityPolicyTemplateName: restricted-noroot kubernetesVersion: # 定义 RKE2 版本 rkeConfig: machineSelectorConfig: - config: profile: cis-1.6 protect-kernel-defaults: true ```
+--
+[,yaml]
+----
+apiVersion: provisioning.cattle.io/v1
+kind: Cluster
+metadata:
+  name: # 定义集群名称
+spec:
+  defaultPodSecurityPolicyTemplateName: restricted-noroot
+  kubernetesVersion: # 定义 RKE2 版本
+  rkeConfig:
+    machineSelectorConfig:
+      - config:
+          profile: cis-1.6
+          protect-kernel-defaults: true
+----
+--
 ======
 
 == 结论
