--- a/versions/v2.8/modules/zh/pages/cluster-deployment/infra-providers/azure/azure.adoc
+++ b/versions/v2.8/modules/zh/pages/cluster-deployment/infra-providers/azure/azure.adoc
@@ -48,11 +48,88 @@ az ad sp create-for-rbac \
 ======
 Tab RKE::
 +
-1. [创建云凭证](#1-创建云凭证) 2. [使用云凭证创建节点模板](#2-使用云凭证创建节点模板) 3. [使用节点模板创建具有节点池的集群](#3-使用节点模板创建具有节点池的集群) ### 1. 创建云凭证 1. 点击 **☰ > 集群管理**。 1. 单击**云凭证**。 1. 单击**创建**。 1. 单击 **Azure**。 1. 输入你的 Azure 凭证。 1. 单击**创建**。 **结果**：已创建用于在集群中配置节点的云凭证。你可以在其他节点模板或集群中复用这些凭证。 ### 2. 使用云凭证创建节点模板 为 Azure 创建[节点模板](../infra-providers.md#节点模板)会允许 Rancher 在 Azure 中配置新节点。其他集群可以复用节点模板。 1. 点击 **☰ > 集群管理**。 1. 单击 **RKE1 配置 > 节点模板**。 1. 单击**添加模板**。 1. 单击 **Azure**。 1. 填写 Azure 的节点模板。有关填写表单的帮助，请参阅 [Azure 节点模板配置](node-template-configuration.md)。 ### 3. 使用节点模板创建具有节点池的集群 使用 Rancher 在 Azure 中创建 Kubernetes 集群。 1. 点击 **☰ > 集群管理**。 1. 在**集群**页面上，单击**创建**。 1. 单击 **Azure**。 1. 输入**集群名称**。 1. 将一个或多个节点池添加到你的集群。每个节点池都使用节点模板来配置新节点。有关节点池及其最佳实践的更多信息，请参阅[本节](../infra-providers.md)。 1. 在**集群配置**中，选择要安装的 Kubernetes 版本、要使用的网络提供商，以及是否启用项目网络隔离。要查看更多集群选项，请单击**显示高级选项**。如需获取配置集群的帮助，请参阅 [RKE 集群配置参考](../../configuration/rke1.md)。 1. 使用**成员角色**为集群配置用户授权。点击**添加成员**添加可以访问集群的用户。使用**角色**下拉菜单为每个用户设置权限。 1. 单击**创建**。 
+--
+. <<1-创建云凭证,创建云凭证>>
+. <<2-使用云凭证创建节点模板,使用云凭证创建节点模板>>
+. <<3-使用节点模板创建具有节点池的集群,使用节点模板创建具有节点池的集群>>
+
+[#_rke_1_创建云凭证]
+[pass]
+<h3><a class="anchor" id="_rke_1_创建云凭证" href="#_rke_1_创建云凭证"></a>1. 创建云凭证</h3>
+
+. 点击 *☰ > 集群管理*。
+. 单击**云凭证**。
+. 单击**创建**。
+. 单击 *Azure*。
+. 输入你的 Azure 凭证。
+. 单击**创建**。
+
+*结果*：已创建用于在集群中配置节点的云凭证。你可以在其他节点模板或集群中复用这些凭证。
+
+[#_2_使用云凭证创建节点模板]
+[pass]
+<h3><a class="anchor" id="_2_使用云凭证创建节点模板" href="#_2_使用云凭证创建节点模板"></a>2. 使用云凭证创建节点模板</h3>
+
+为 Azure 创建link:../infra-providers.adoc#节点模板[节点模板]会允许 Rancher 在 Azure 中配置新节点。其他集群可以复用节点模板。
+
+. 点击 *☰ > 集群管理*。
+. 单击 menu:RKE1 配置[节点模板]。
+. 单击**添加模板**。
+. 单击 *Azure*。
+. 填写 Azure 的节点模板。有关填写表单的帮助，请参阅 link:node-template-configuration.adoc[Azure 节点模板配置]。
+
+[#_3_使用节点模板创建具有节点池的集群]
+[pass]
+<h3><a class="anchor" id="_3_使用节点模板创建具有节点池的集群" href="#_3_使用节点模板创建具有节点池的集群"></a>3. 使用节点模板创建具有节点池的集群</h3>
+
+使用 Rancher 在 Azure 中创建 Kubernetes 集群。
+
+. 点击 *☰ > 集群管理*。
+. 在**集群**页面上，单击**创建**。
+. 单击 *Azure*。
+. 输入**集群名称**。
+. 将一个或多个节点池添加到你的集群。每个节点池都使用节点模板来配置新节点。有关节点池及其最佳实践的更多信息，请参阅link:../infra-providers.adoc[本节]。
+. 在**集群配置**中，选择要安装的 Kubernetes 版本、要使用的网络提供商，以及是否启用项目网络隔离。要查看更多集群选项，请单击**显示高级选项**。如需获取配置集群的帮助，请参阅 link:../../configuration/rke1.adoc[RKE 集群配置参考]。
+. 使用**成员角色**为集群配置用户授权。点击**添加成员**添加可以访问集群的用户。使用**角色**下拉菜单为每个用户设置权限。
+. 单击**创建**。
+--
 
 Tab RKE2::
 +
-### 1. 创建云凭证 如果你已经有一组可用的云凭证，请跳过此部分。 1. 点击 **☰ > 集群管理**。 1. 单击**云凭证**。 1. 单击**创建**。 1. 单击 **Azure**。 1. 输入你的 Azure 凭证。 1. 单击**创建**。 **结果**：已创建用于在集群中配置节点的云凭证。你可以在其他节点模板或集群中复用这些凭证。 ### 2. 创建你的集群 使用 Rancher 在 Azure 中创建 Kubernetes 集群。 1. 点击 **☰ > 集群管理**。 1. 在**集群**页面上，单击**创建**。 1. 将开关切换到 **RKE2/K3s**。 1. 单击 **Azure**。 1. 选择一个**云凭证**。如果存在多个则需要选择。否则，它是预选的。 1. 输入**集群名称**。 1. 为每个 Kubernetes 角色创建一个主机池。请参阅[最佳实践](../infra-providers.md#节点角色)了解角色分配和计数的建议。 1. 为每个主机池定义主机配置。有关配置选项的信息，请参阅 [Azure 主机配置参考](machine-configuration.md)。 1. 使用**集群配置**，选择要安装的 Kubernetes 版本、要使用的网络提供商，以及是否启用项目网络隔离。有关配置集群的帮助，请参阅 [RKE2 集群配置参考](../../configuration/rke2.md)。 1. 使用**成员角色**为集群配置用户授权。点击**添加成员**添加可以访问集群的用户。使用**角色**下拉菜单为每个用户设置权限。 1. 单击**创建**。
+--
+[#_1_创建云凭证]
+[pass]
+<h3><a class="anchor" id="_1_创建云凭证" href="#_1_创建云凭证"></a>1. 创建云凭证</h3>
+
+如果你已经有一组可用的云凭证，请跳过此部分。
+
+. 点击 *☰ > 集群管理*。
+. 单击**云凭证**。
+. 单击**创建**。
+. 单击 *Azure*。
+. 输入你的 Azure 凭证。
+. 单击**创建**。
+
+*结果*：已创建用于在集群中配置节点的云凭证。你可以在其他节点模板或集群中复用这些凭证。
+
+[#_2_创建你的集群]
+[pass]
+<h3><a class="anchor" id="_2_创建你的集群" href="#_2_创建你的集群"></a>2. 创建你的集群</h3>
+
+使用 Rancher 在 Azure 中创建 Kubernetes 集群。
+
+. 点击 *☰ > 集群管理*。
+. 在**集群**页面上，单击**创建**。
+. 将开关切换到 *RKE2/K3s*。
+. 单击 *Azure*。
+. 选择一个**云凭证**。如果存在多个则需要选择。否则，它是预选的。
+. 输入**集群名称**。
+. 为每个 Kubernetes 角色创建一个主机池。请参阅link:../infra-providers.adoc#节点角色[最佳实践]了解角色分配和计数的建议。
+ .. 为每个主机池定义主机配置。有关配置选项的信息，请参阅 link:./machine-configuration.adoc[Azure 主机配置参考]。
+. 使用**集群配置**，选择要安装的 Kubernetes 版本、要使用的网络提供商，以及是否启用项目网络隔离。有关配置集群的帮助，请参阅 link:../../configuration/rke2.adoc[RKE2 集群配置参考]。
+. 使用**成员角色**为集群配置用户授权。点击**添加成员**添加可以访问集群的用户。使用**角色**下拉菜单为每个用户设置权限。
+. 单击**创建**。
+--
 ======
 
 *结果*：
