--- a/versions/v2.8/modules/zh/pages/installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/install-adapter.adoc
+++ b/versions/v2.8/modules/zh/pages/installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/install-adapter.adoc
@@ -113,11 +113,64 @@ ____
 ======
 Tab Let's Encrypt/可信的 CA::
 +
-```bash helm install rancher-csp-adapter rancher-charts/rancher-csp-adapter --namespace cattle-csp-adapter-system --set aws.enabled=true --set aws.roleName=$MY_ROLE_NAME --set-string aws.accountNumber=$MY_ACC_NUM --version $CSP_ADAPTER_VERSION ``` 你也可以使用 `values.yaml` 并指定以下选项： ```yaml aws: enabled: true accountNumber: "$MY_ACC_NUM" roleName: $MY_ROLE_NAME ``` > **注意**：账号需要像上面那样以字符串格式指定，否则安装会失败。 然后，使用以下命令安装 Adapter： ```bash helm install rancher-csp-adapter rancher-charts/rancher-csp-adapter -f values.yaml --version $CSP_ADAPTER_VERSION ``` 
+--
+[,bash]
+----
+helm install rancher-csp-adapter rancher-charts/rancher-csp-adapter --namespace cattle-csp-adapter-system --set aws.enabled=true --set aws.roleName=$MY_ROLE_NAME --set-string aws.accountNumber=$MY_ACC_NUM --version $CSP_ADAPTER_VERSION
+----
+
+你也可以使用 `values.yaml` 并指定以下选项：
+
+[,yaml]
+----
+aws:
+  enabled: true
+  accountNumber: "$MY_ACC_NUM"
+  roleName: $MY_ROLE_NAME
+----
+
+____
+*注意*：账号需要像上面那样以字符串格式指定，否则安装会失败。
+____
+
+然后，使用以下命令安装 Adapter：
+
+[,bash]
+----
+helm install rancher-csp-adapter rancher-charts/rancher-csp-adapter -f values.yaml --version $CSP_ADAPTER_VERSION
+----
+--
 
 Tab 私有 CA/Rancher 生成的证书::
 +
-```bash helm install rancher-csp-adapter rancher-charts/rancher-csp-adapter --namespace cattle-csp-adapter-system --set aws.enabled=true --set aws.roleName=$MY_ROLE_NAME --set-string aws.accountNumber=$MY_ACC_NUM --set additionalTrustedCAs=true --version $CSP_ADAPTER_VERSION ``` 你也可以使用 `values.yaml` 并指定以下选项： ```yaml aws: enabled: true accountNumber: "$MY_ACC_NUM" roleName: $MY_ROLE_NAME additionalTrustedCAs: true ``` > **注意**：账号需要像上面那样以字符串格式指定，否则安装会失败。 然后，使用以下命令安装 Adapter： ```bash helm install rancher-csp-adapter rancher-charts/rancher-csp-adapter -f values.yaml --version $CSP_ADAPTER_VERSION ```
+--
+[,bash]
+----
+helm install rancher-csp-adapter rancher-charts/rancher-csp-adapter --namespace cattle-csp-adapter-system --set aws.enabled=true --set aws.roleName=$MY_ROLE_NAME --set-string aws.accountNumber=$MY_ACC_NUM --set additionalTrustedCAs=true --version $CSP_ADAPTER_VERSION
+----
+
+你也可以使用 `values.yaml` 并指定以下选项：
+
+[,yaml]
+----
+aws:
+  enabled: true
+  accountNumber: "$MY_ACC_NUM"
+  roleName: $MY_ROLE_NAME
+additionalTrustedCAs: true
+----
+
+____
+*注意*：账号需要像上面那样以字符串格式指定，否则安装会失败。
+____
+
+然后，使用以下命令安装 Adapter：
+
+[,bash]
+----
+helm install rancher-csp-adapter rancher-charts/rancher-csp-adapter -f values.yaml --version $CSP_ADAPTER_VERSION
+----
+--
 ======
 
 == 5. 管理证书更新
