--- a/versions/v2.8/modules/zh/pages/observability/istio/configuration/install-istio-on-rke2-cluster.adoc
+++ b/versions/v2.8/modules/zh/pages/observability/istio/configuration/install-istio-on-rke2-cluster.adoc
@@ -10,11 +10,55 @@
 ======
 Tab RKE2::
 +
-```yaml apiVersion: install.istio.io/v1alpha1 kind: IstioOperator spec: components: cni: enabled: true k8s: overlays: - apiVersion: "apps/v1" kind: "DaemonSet" name: "istio-cni-node" patches: - path: spec.template.spec.containers.[name:install-cni].securityContext.privileged value: true values: cni: cniBinDir: /opt/cni/bin cniConfDir: /etc/cni/net.d ``` 
+--
+[,yaml]
+----
+apiVersion: install.istio.io/v1alpha1
+kind: IstioOperator
+spec:
+  components:
+    cni:
+      enabled: true
+      k8s:
+        overlays:
+        - apiVersion: "apps/v1"
+          kind: "DaemonSet"
+          name: "istio-cni-node"
+          patches:
+          - path: spec.template.spec.containers.[name:install-cni].securityContext.privileged
+            value: true
+  values:
+    cni:
+      cniBinDir: /opt/cni/bin
+      cniConfDir: /etc/cni/net.d
+----
+--
 
 Tab K3s::
 +
-```yaml apiVersion: install.istio.io/v1alpha1 kind: IstioOperator spec: components: cni: enabled: true k8s: overlays: - apiVersion: "apps/v1" kind: "DaemonSet" name: "istio-cni-node" patches: - path: spec.template.spec.containers.[name:install-cni].securityContext.privileged value: true values: cni: cniBinDir: /var/lib/rancher/k3s/data/current/bin cniConfDir: /var/lib/rancher/k3s/agent/etc/cni/net.d ```
+--
+[,yaml]
+----
+apiVersion: install.istio.io/v1alpha1
+kind: IstioOperator
+spec:
+  components:
+    cni:
+      enabled: true
+      k8s:
+        overlays:
+        - apiVersion: "apps/v1"
+          kind: "DaemonSet"
+          name: "istio-cni-node"
+          patches:
+          - path: spec.template.spec.containers.[name:install-cni].securityContext.privileged
+            value: true
+  values:
+    cni:
+      cniBinDir: /var/lib/rancher/k3s/data/current/bin
+      cniConfDir: /var/lib/rancher/k3s/agent/etc/cni/net.d
+----
+--
 ======
 
 *结果*：现在你应该可以根据需要使用 Istio，包括 Sidecar 注入和通过 Kiali 进行监控。
