latest/2.8 zh fix image path

--- a/versions/latest/modules/zh/pages/integrations/neuvector/overview.adoc
+++ b/versions/latest/modules/zh/pages/integrations/neuvector/overview.adoc
@@ -126,7 +126,7 @@ Tab RKE1::
 
 ... 在**编辑选项** > **其它配置**下，选中复选框来启用 *Pod 安全策略*（无需其他配置）：
 +
-image::/img/psp-nv-rke.png[为 RKE1 强化集群启用 PSP]
+image:psp-nv-rke.png[为 RKE1 强化集群启用 PSP]
 
 .. 点击右下角的**安装**。
 --
@@ -159,7 +159,7 @@ ____
 
 ... 在**编辑选项** > **其它配置**下，选中复选框来启用 *Pod 安全策略*。请注意，对于 `Manager runAsUser ID`，`Scanner runAsUser ID` 和 `Updater runAsUser ID`，你还必须输入大于 `0` 的值：
 +
-image::/img/psp-nv-rke2.png[为 RKE2 和 K3s 强化集群启用 PSP]
+image:psp-nv-rke2.png[为 RKE2 和 K3s 强化集群启用 PSP]
 
 .. 点击右下角的**安装**。
 --
